@@ -10,6 +10,9 @@ Release date: tba
 Core and Builtins
 -----------------
 
+- Issue #27005: Optimized the float.fromhex() class method for exact float.
+  It is now 2 times faster.
+
 - Issue #18531: Single var-keyword argument of dict subtype was passed
   unscathed to the C-defined function.  Now it is converted to exact dict.
 
